[package]
name = "caiyun-weather-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-br", "compression-gzip", "set-header"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
urlencoding = "2"
chrono = { version = "0.4", default-features = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
